<resources>
    <string name="app_name" translatable="false">Logical Cube</string>
    <string name="turn_circle">Turn of \'O\'</string>
    <string name="turn_cross">Turn of \'X\'</string>
    <string name="result_circle">\'O\' won!</string>
    <string name="result_cross">\'X\' won!</string>
    <string name="btn_start_local">Start</string>
    <string name="btn_reset">Reset</string>
    <string name="mark_circle" translatable="false">O</string>
    <string name="mark_cross" translatable="false">X</string>
    <string name="arrow_left" translatable="false">←</string>
    <string name="arrow_right" translatable="false">→</string>
    <string name="arrow_up" translatable="false">↑</string>
    <string name="arrow_down" translatable="false">↓</string>
    <string name="arrow_RD" translatable="false">↘</string>
    <string name="arrow_LU" translatable="false">↖</string>
    <string name="arrow_LD" translatable="false">↙</string>
    <string name="arrow_RU" translatable="false">↗</string>
    <string name="btn_rule">Rule</string>
</resources>
