<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LocalGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_lavender"
        android:orientation="vertical"
        android:gravity="center" >

        <Button
            android:id="@+id/button_reset_upside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/btn_reset"
            android:rotation="180"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/text_turn_upside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=""
            android:rotation="180"
            android:gravity="center_horizontal"
            android:layout_gravity="top"
            android:layout_marginBottom="50dp" />

        <GridLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:columnCount="5"
            android:rowCount="5"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button_turn_counterclockwise_upside"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_LD"
                android:layout_row="0"
                android:layout_column="0"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Up_L"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_up"
                android:layout_row="0"
                android:layout_column="1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Up_C"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_up"
                android:layout_row="0"
                android:layout_column="2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Up_R"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_up"
                android:layout_row="0"
                android:layout_column="3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_clockwise_upside"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_RD"
                android:layout_row="0"
                android:layout_column="4"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Left_U"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text="@string/arrow_left"
                android:layout_row="1"
                android:layout_column="0"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_LU"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="1"
                android:layout_column="1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_CU"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="1"
                android:layout_column="2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_RU"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="1"
                android:layout_column="3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Right_U"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text="@string/arrow_right"
                android:layout_row="1"
                android:layout_column="4"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Left_C"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text="@string/arrow_left"
                android:layout_row="2"
                android:layout_column="0"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_LC"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="2"
                android:layout_column="1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_CC"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="2"
                android:layout_column="2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_RC"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="2"
                android:layout_column="3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Right_C"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text="@string/arrow_right"
                android:layout_row="2"
                android:layout_column="4"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Left_D"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text="@string/arrow_left"
                android:layout_row="3"
                android:layout_column="0"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_LD"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="3"
                android:layout_column="1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_CD"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="3"
                android:layout_column="2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_RD"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text=""
                android:layout_row="3"
                android:layout_column="3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Right_D"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="2"
                android:textSize="25sp"
                android:text="@string/arrow_right"
                android:layout_row="3"
                android:layout_column="4"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_clockwise_downside"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_LU"
                android:layout_row="4"
                android:layout_column="0"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Down_L"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_down"
                android:layout_row="4"
                android:layout_column="1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Down_C"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_down"
                android:layout_row="4"
                android:layout_column="2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_Down_R"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_down"
                android:layout_row="4"
                android:layout_column="3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_turn_counterclockwise_downside"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="3"
                android:textSize="25sp"
                android:text="@string/arrow_RU"
                android:layout_row="4"
                android:layout_column="4"
                android:textAllCaps="false" />
        </GridLayout>

        <TextView
            android:id="@+id/text_turn_downside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=""
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/button_reset_downside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/btn_reset"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>